--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-# Latest Education Coupons and Discount For Students
+<title>Latest Education Coupons and Discount For Students</title>
+
+<h1>Latest Education Coupons and Discount For Students</h1>h1>
 
 <table dir="ltr" border="1" cellspacing="0" cellpadding="0" data-sheets-root="1" data-sheets-baot="1"><colgroup><col width="310" /></colgroup>
 <tbody>
